--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <link rel="icon" href="https://risibank.fr/cache/stickers/d1014/101459-full.png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="menu">
         <ul>
-            <li><a href="index.php">HOME</a></li>
+            <li><a href="index.html" class="active">HOME</a></li>
+            <br>
             <li><a href="ajouter.php">AJOUTER UN STICKER</a></li>
         </ul>
         
