--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 <body>
     <div class="menu">
         <ul>
-            <li><a href="index.html" class="active">HOME</a></li>
-            <br>
+            <li><a href="index.html" class="active">ACCUEIL</a></li>
+
             <li><a href="ajouter.php">AJOUTER UN STICKER</a></li>
+            <li><a href="credits.html">CREDITS</a></li>
+            <br>
+            <div class="logo"></div>
         </ul>
         
     </div>
